--- a/compose-templates/postgres-14/docker-compose.yml
+++ b/compose-templates/postgres-14/docker-compose.yml
@@ -20,12 +20,13 @@ services:
       - "POSTGRES_DB=postgres"
       - "POSTGRES_USER=postgres"
       - "POSTGRES_PASSWORD=postgres"
-      # - "TZ=UTC-3"
+      # - "TZ=UTC"
+      # - "TZ=America/Sao_Paulo"
     ports:
       - 5432:5432
-    volumes:
-      - ./[data-dir]:/var/lib/postgresql/data
-      - ./[init-dir]:/docker-entrypoint-initdb.d/ # use .sh, .sql, run in alphabetical order
+    # volumes:
+      # - ./[data-dir]:/var/lib/postgresql/data
+      # - ./[init-dir]:/docker-entrypoint-initdb.d/ # use .sh, .sql, run in alphabetical order
   # application:
   #   container_name: application
   #   image: [img]
