--- a/compose-templates/httpd-2.4.57/docker-compose.yml
+++ b/compose-templates/httpd-2.4.57/docker-compose.yml
@@ -4,6 +4,10 @@ services:
   httpd_base_2:
     container_name: httpd-base-2
     image: httpd:2.4.57-alpine3.18
+    command: sh -c "apk add --no-cache tzdata && httpd-foreground"
+    environment:
+      - "TZ=UTC"
+      # - "TZ=America/Sao_Paulo"
     ports:
       - 80:80
     volumes:
