--- a/compose-templates/mongo-5.0.3/docker-compose.yml
+++ b/compose-templates/mongo-5.0.3/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   mongo_base_5:
-    container_name: mongo_base_5
+    container_name: mongo-base-5
     image: mongo:5.0.3
     restart: unless-stopped
     # network_mode: host
@@ -11,21 +11,22 @@ services:
         max-file: "5"
         max-size: "20m"
     healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongo localhost:27017/data --quiet
+      test: echo "db.runCommand(\"ping\").ok" | mongo localhost:27017/data --quiet
       interval: 10s
-      retries: 10
+      retries: 15
       start_period: 5s
       timeout: 20s
     environment:
-      - "MONGO_INITDB_ROOT_USERNAME=mongo"
-      - "MONGO_INITDB_ROOT_PASSWORD=mongo
       - "MONGO_INITDB_DATABASE=mongo"
-      # - "TZ=UTC-3"
+      - "MONGO_INITDB_ROOT_USERNAME=mongo"
+      - "MONGO_INITDB_ROOT_PASSWORD=mongo"
+      # - "TZ=UTC"
+      # - "TZ=America/Sao_Paulo"
     ports:
       - 27017:27017
-    volumes:    
-      - ./[data-dir]:/data/db 
-      - ./[init-dir]:/docker-entrypoint-initdb.d # use .sh, .js, run in alphabetical order
+    # volumes:    
+    #   - ./[data-dir]:/data/db 
+    #   - ./[init-dir]:/docker-entrypoint-initdb.d # use .sh, .js, run in alphabetical order
   # application:
   #   container_name: application
   #   image: [img]
