--- a/compose-templates/httpd-2.4.57/docker-compose.yml
+++ b/compose-templates/httpd-2.4.57/docker-compose.yml
@@ -1,4 +1,9 @@
-version: '3'
+version: "3"
+
+# Notes:
+# The services.[service].command property is only needed when you want to set a timezone through the "TZ"
+#   environtment variable since the command installs the "tzdata" application inside the application and 
+#   then run the http server as the container starts
 
 services:
   httpd_base_2:
@@ -10,6 +15,5 @@ services:
       # - "TZ=America/Sao_Paulo"
     ports:
       - 80:80
-    volumes:
-      - [data-dir]:/usr/local/apache2/htdocs/
-  
+    # volumes:
+    #   - ./[data-dir]:/usr/local/apache2/htdocs/
