updated mongo compose template

--- a/compose-templates/mongo-5.0.3/docker-compose.yml
+++ b/compose-templates/mongo-5.0.3/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "MONGO_INITDB_DATABASE=mongo"
       - "MONGO_INITDB_ROOT_USERNAME=mongo"
       - "MONGO_INITDB_ROOT_PASSWORD=mongo"
-      # - "TZ=UTC"
+      # - "TZ=UTC" # Container default
       # - "TZ=America/Sao_Paulo"
     ports:
       - 27017:27017
