--- a/compose-templates/mysql-8/docker-compose.yml
+++ b/compose-templates/mysql-8/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - "MYSQL_USER=mysqluser"
       - "MYSQL_PASSWORD=mysqlpass"
       - "MYSQL_ROOT_PASSWORD=mysqlrootpass"
-      # - "TZ=UTC"
+      # - "TZ=UTC" # Container default
       # - "TZ=America/Sao_Paulo"
     ports:
       - 3306:3306
