--- a/compose-templates/postgres-15/docker-compose.yml
+++ b/compose-templates/postgres-15/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - "POSTGRES_DB=postgres"
       - "POSTGRES_USER=postgres"
       - "POSTGRES_PASSWORD=postgres"
-      # - "TZ=UTC"
+      # - "TZ=UTC" # Container default
       # - "TZ=America/Sao_Paulo"
     ports:
       - 5433:5432
